--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,7 @@
-.ssh
-.CFUserTextEncoding
-.DS_Store
-.oh-my-zsh/
-.vim/
-.viminfo
-.zsh_history
-.zshrc.swp
-Applications/
-Desktop/
-Documents/
-Downloads/
-Library/
-Movies/
-Music/
-Pictures/
-Public/
-.zcompdump-Mark*
-.atom/
-.bash_history
-workspace/
+*
+!.gitignore
+!.vimrc
+!.zshrc
+!.emacs
+!.emacs.d/
+!.gitconfig
