--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,8 @@
 !.emacs
 !.emacs.d/init.el
 !.emacs.d/personal.el
+!.emacs.d/user_settings/
+.emacs.d/user_settings/*
+!.emacs.d/user_settings/keybindings.el
+!.emacs.d/user_settings/editor.el
 !.gitconfig/*
