--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,8 @@
 */*
 !.emacs.d/init.el
 !.emacs.d/personal.el
+!.emacs.d/user_settings/
+.emacs.d/user_settings/*
+!.emacs.d/user_settings/keybindings.el
+!.emacs.d/user_settings/editor.el
 !.gitconfig/*
